# pov-shuffle

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  validate.yml
data/bias_per_iter/2026-06-22T19:18:55/: README.md  biases.csv  details.yml
data/breaking_point_per_deck_size/2026-06-20T23:32:19/: README.md  breaking_points.csv  details.yml
data/breaking_point_per_deck_size/2026-06-22T14:05:38/report/: README.md  breaking_points.csv  details.yml
data/time_per_deck_size/2026-06-13T18:06:50/: details.yml  timings.csv
data/time_per_deck_size/2026-06-13T20:37:25/: timings.csv
data/time_per_deck_size/2026-06-13T20:54:09/: README.md  details.yml  timings.csv
data/tvd_per_iter/2026-05-17T23:01:07/: details.yml  ngram_tvds.csv  tvds.csv
data/tvd_per_iter/2026-06-13T15:33:30/: README.md  details.yml  ngram_tvds.csv  tvds.csv
data/tvd_per_iter/2026-06-20T23:12:46/: README.md  details.yml  ngram_tvds.csv  tvds.csv
docs/: GLOSSARY.md
src/povs/: __init__.py  _cuda.pyi  common.py  constants.py  memmap.py  numpy.py  optim.py  options.py  torch.py  types.py  utils.py
src/povs/__cuda/: module.cpp
src/povs/__cuda/binds/: torch.cpp  torch.h
src/povs/__cuda/lib/: povs.cu  povs.h  utils.h
src/povs/__cuda/test/: test_inst_copy_tiler.cu  test_vblk_inst_comp_tiler.cu
src/povs/eval/: __init__.py  exercises.py  io.py  lstm.py  metrics.py  params.py  plots.py  reports.py  types.py  utils.py
src/povs/eval/scripts/: bias_per_iter.py  breaking_point_per_deck_size.py  time_per_deck_size.py  time_per_options.py  tvd_per_iter.py
src/tests/: test_choose_offsets.py  test_choose_pblock_size.py  test_choose_thr_block_size.py  test_pov_shuffle.py  test_pov_shuffle_memmap.py  test_utils.py
src/tests/eval/: test_metrics.py  test_relative_travel_distances.py
