
[build-system]
build-backend = "setuptools.build_meta"
requires = ["wheel", "setuptools"]

[project]
name = "pov-shuffle"
version = "0.1.0"
requires-python = ">=3.12,<4"

dependencies = [
    "numpy            ~=2.4",
]

[dependency-groups]
dev = [
    "pytest           >=8.0",
    "setuptools       >=80.9",
    "ruff             ~=0.14",
    "jupyter          ~=1.1",
]

# === Ruff ========================================================================================

[tool.ruff]
line-length = 120
indent-width = 4
extend-include = []
exclude = [
    ".eggs",
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
exclude = [""]
fixable = ["ALL"]
unfixable = []
select = [
    "F",   # Pyflakes
    "E",   # Errors
    "W",   # Warning
    "I",   # isort
    "TCH", # Typecheck
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",  # Line too long
    "E731",  # Do not assign a lambda expression, use a def
]
